--- a/client/src/style.css
+++ b/client/src/style.css
@@ -2,11 +2,11 @@
 
 /* Global Styles */
 :root {
-  --primary-color: #dc3545;
+  --primary-color: rgb(185, 145, 236);
   --dark-color: #333333;
   --light-color: #f4f4f4;
-  --danger-color: #dc3545;
-  --success-color: #28a745;
+  --danger-color: #bb0114;
+  --success-color: #15b63a;
 }
 
 * {
@@ -121,7 +121,7 @@ img {
   margin: 0.5rem 0;
 }
 
-.list li {
+.list-li {
   padding-bottom: 0.3rem;
 }
 
